fix profile header layout bug (#133)

--- a/app/javascript/components/profile-nav/style.less
+++ b/app/javascript/components/profile-nav/style.less
@@ -1,4 +1,5 @@
 .profile-nav {
+  margin-top: -5px;
   width: 100%;
   height: 60px;
   display: flex;
