--- a/app/javascript/components/profile/style.less
+++ b/app/javascript/components/profile/style.less
@@ -4,6 +4,10 @@
   position: relative;
 }
 
+.profile-header__name {
+  margin-top: 38px;
+}
+
 .profile-header__setting {
   position: absolute;
   top: -5px;
@@ -39,8 +43,8 @@
 }
 
 .profile-children {
-  width: calc(100% - 40px);
-  margin: 0 20px;
+  width: calc(100% - 32px);
+  margin: 0 16px;
   margin-top: 20px;
   display: flex;
   justify-content: space-between;
@@ -48,7 +52,7 @@
 }
 
 .profile-children__item {
-  width: 44.6%;
+  width: 45.2%;
   height: 215px;
   margin-bottom: 30px;
   border: 0.5px solid rgba(255, 112, 152, 0.3);
@@ -62,7 +66,7 @@
 
 .profile-children__img {
   width: 100%;
-  height: 57.2%;
+  height: 61.2%;
   margin-bottom: 24px;
   object-fit: cover;
 
